fix(app): fixed file download on android application

--- a/app/locales/ar-SA.json
+++ b/app/locales/ar-SA.json
@@ -96,6 +96,7 @@
     },
     "global": {
         "successSave": "تم الحفظ بنجاح",
+        "successShare": "تمت المشاركة بنجاح",
         "errorSave": "حدث خطأ أثناء الحفظ.",
         "errorSend": "حدث خطأ أثناء إرسال البيانات",
         "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا أو تحديث الصفحة.",
@@ -104,6 +105,7 @@
         "unknownError": "حدث خطأ غير معروف. 😔",
         "errorLoad": "لا يحتوي الملف على بيانات صالحة!",
         "invalidJson": "تنسيق الملف غير صالح! يرجى التأكد من أنك قد قمت بتحميل ملف JSON.",
-        "anotherFile": "يرجى المحاولة مرة أخرى أو اختيار ملف مختلف."
+        "anotherFile": "يرجى المحاولة مرة أخرى أو اختيار ملف مختلف.",
+        "ar-SA": "يرجى السماح بالوصول إلى وحدة التخزين."
     }
 }
