--- a/app/locales/hi-IN.json
+++ b/app/locales/hi-IN.json
@@ -96,6 +96,7 @@
     },
     "global": {
         "successSave": "सफलतापूर्वक सहेजा गया",
+        "successShare": "सफलतापूर्वक साझा किया गया",
         "errorSave": "सहेजने में एक त्रुटि हुई।",
         "errorSend": "डेटा भेजने में एक त्रुटि हुई",
         "tryAgain": "कृपया बाद में पुनः प्रयास करें या पृष्ठ को रिफ्रेश करें।",
@@ -104,6 +105,7 @@
         "unknownError": "अज्ञात त्रुटि हुई। 😔",
         "errorLoad": "फाइल में वैध डेटा नहीं है!",
         "invalidJson": "अमान्य फाइल प्रारूप! कृपया सुनिश्चित करें कि आपने JSON फाइल अपलोड की है।",
-        "anotherFile": "कृपया पुनः प्रयास करें या कोई अन्य फाइल चुनें।"
+        "anotherFile": "कृपया पुनः प्रयास करें या कोई अन्य फाइल चुनें।",
+        "hi-IN": "कृपया स्टोरेज तक पहुंच की अनुमति दें।"
     }
 }
