--- a/app/locales/ru-RU.json
+++ b/app/locales/ru-RU.json
@@ -96,6 +96,7 @@
     },
     "global": {
         "successSave": "Успешно сохранено",
+        "successShare": "Успешно отправлено",
         "errorSave": "Ошибка при сохранении.",
         "errorSend": "Ошибка при отправке данных.",
         "tryAgain": "Пожалуйста, попробуйте снова позже или обновите страницу.",
@@ -104,6 +105,7 @@
         "unknownError": "Произошла неизвестная ошибка. 😔",
         "errorLoad": "Файл не содержит допустимых данных!",
         "invalidJson": "Неверный формат файла! Пожалуйста, убедитесь, что вы загрузили файл в формате JSON.",
-        "anotherFile": "Пожалуйста, попробуйте снова или выберите другой файл."
+        "anotherFile": "Пожалуйста, попробуйте снова или выберите другой файл.",
+        "ru-RU": "Пожалуйста, разрешите доступ к хранилищу."
     }
 }
